{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 64,
  "lineage": "bd84521c-b815-1282-b658-30e1992689c8",
  "resources": [
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:637423499518:instance/i-0fd3f6e715327244a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd3f6e715327244a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "due1-common-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3ec16d7e31f6e1d",
            "private_dns": "ip-10-0-10-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-070aed8b6abe208d9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-051b6f0e83b6b670b",
              "sg-0d6f14f109b4f784b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eea83a4b8e924ed",
            "tags": {
              "Name": "due1-bastion-machine",
              "Owner": "huyhoang.ph",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "due1-bastion-machine",
              "Owner": "huyhoang.ph",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051b6f0e83b6b670b",
              "sg-0d6f14f109b4f784b"
            ]
          },
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_allow_common",
            "module.aws-sg.aws_security_group.basic_bastion_host",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc",
            "module.ssh-key.aws_key_pair.common_key",
            "module.ssh-key.tls_private_key.ssh_key_instances"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic_allow_common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-051b6f0e83b6b670b",
            "description": "SG for common purpose between resources",
            "egress": [],
            "id": "sg-051b6f0e83b6b670b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6f14f109b4f784b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "due1-common-sg",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "due1-common-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-common-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic_allow_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-03cea8ab3d53ef42d",
            "description": "SG for all resources that need to access to The Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-03cea8ab3d53ef42d",
            "ingress": [],
            "name": "due1-allow-internet-sg",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "due1-allow-internet-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-allow-internet-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-0d6f14f109b4f784b",
            "description": "SG for bastion host",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow Bastion to ssh to all machines",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051b6f0e83b6b670b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0d6f14f109b4f784b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from source",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "due1-bastion-sg",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "due1-bastion-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-bastion-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-0231846268700cba5",
            "description": "SG for database",
            "egress": [],
            "id": "sg-0231846268700cba5",
            "ingress": [],
            "name": "due1-database-sg",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "due1-database-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-database-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-01c1107acd3816664",
            "description": "SG for ELB to receive traffics",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ELB port 443 to WAS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a22a24a4f105d9ec"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ELB port 80 to WAS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a22a24a4f105d9ec"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-01c1107acd3816664",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public access on port 443 from ELB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public access on port 80 from ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "due1-elb-sg",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "due1-elb-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-elb-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic_was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-0a22a24a4f105d9ec",
            "description": "SG for Web Application Server machines",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0231846268700cba5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0a22a24a4f105d9ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Receive traffic from ELB port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1107acd3816664"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Receive traffic from ELB port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c1107acd3816664"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "due1-was-sg",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "due1-was-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-was-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-06d439a8e294c73db",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06d439a8e294c73db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03cea8ab3d53ef42d",
            "security_group_rule_id": "sgr-06d439a8e294c73db",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_allow_internet",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-056df36ae6d94d8cb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-056df36ae6d94d8cb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03cea8ab3d53ef42d",
            "security_group_rule_id": "sgr-056df36ae6d94d8cb",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_allow_internet",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_to_common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0c8c862dd5f1fb35c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Bastion to ssh to all machines",
            "from_port": 22,
            "id": "sgr-0c8c862dd5f1fb35c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-051b6f0e83b6b670b",
            "security_group_id": "sg-0d6f14f109b4f784b",
            "security_group_rule_id": "sgr-0c8c862dd5f1fb35c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_allow_common",
            "module.aws-sg.aws_security_group.basic_bastion_host",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "elb_route_to_was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-081cba160b3f1f1e8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow traffic from ELB port 80 to WAS",
            "from_port": 80,
            "id": "sgr-081cba160b3f1f1e8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a22a24a4f105d9ec",
            "security_group_id": "sg-01c1107acd3816664",
            "security_group_rule_id": "sgr-081cba160b3f1f1e8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_elb",
            "module.aws-sg.aws_security_group.basic_was",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0b6c30698cac32dd8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow traffic from ELB port 443 to WAS",
            "from_port": 443,
            "id": "sgr-0b6c30698cac32dd8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a22a24a4f105d9ec",
            "security_group_id": "sg-01c1107acd3816664",
            "security_group_rule_id": "sgr-0b6c30698cac32dd8",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_elb",
            "module.aws-sg.aws_security_group.basic_was",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "was_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0f08dd2c7a0381c65",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0f08dd2c7a0381c65",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0231846268700cba5",
            "security_group_id": "sg-0a22a24a4f105d9ec",
            "security_group_rule_id": "sgr-0f08dd2c7a0381c65",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_database",
            "module.aws-sg.aws_security_group.basic_was",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_host_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-000a8f76ca18556c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH from source",
            "from_port": 22,
            "id": "sgr-000a8f76ca18556c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d6f14f109b4f784b",
            "security_group_rule_id": "sgr-000a8f76ca18556c4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_bastion_host",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "common_allow_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0699316beb6811328",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow SSH traffic from bastion",
            "from_port": 22,
            "id": "sgr-0699316beb6811328",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d6f14f109b4f784b",
            "security_group_id": "sg-051b6f0e83b6b670b",
            "security_group_rule_id": "sgr-0699316beb6811328",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_allow_common",
            "module.aws-sg.aws_security_group.basic_bastion_host",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "elb_allow_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0a418743ec8f691ad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow public access on port 80 from ELB",
            "from_port": 80,
            "id": "sgr-0a418743ec8f691ad",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01c1107acd3816664",
            "security_group_rule_id": "sgr-0a418743ec8f691ad",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_elb",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0c5d236bf643327ab",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow public access on port 443 from ELB",
            "from_port": 443,
            "id": "sgr-0c5d236bf643327ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01c1107acd3816664",
            "security_group_rule_id": "sgr-0c5d236bf643327ab",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_elb",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "was_receive_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0c8c0cda0541ca6b1",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Receive traffic from ELB port 80",
            "from_port": 80,
            "id": "sgr-0c8c0cda0541ca6b1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01c1107acd3816664",
            "security_group_id": "sg-0a22a24a4f105d9ec",
            "security_group_rule_id": "sgr-0c8c0cda0541ca6b1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_elb",
            "module.aws-sg.aws_security_group.basic_was",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group-rule/sgr-0fcbb1894d1b87117",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Receive traffic from ELB port 443",
            "from_port": 443,
            "id": "sgr-0fcbb1894d1b87117",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01c1107acd3816664",
            "security_group_id": "sg-0a22a24a4f105d9ec",
            "security_group_rule_id": "sgr-0fcbb1894d1b87117",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg.aws_security_group.basic_elb",
            "module.aws-sg.aws_security_group.basic_was",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:security-group/sg-088a8e1d3176e9993",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-088a8e1d3176e9993",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423499518",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082fb8ce15cb3b7e6",
            "arn": "arn:aws:ec2:us-east-1:637423499518:elastic-ip/eipalloc-082fb8ce15cb3b7e6",
            "association_id": "eipassoc-0034a6f3867108dd8",
            "domain": "vpc",
            "id": "eipalloc-082fb8ce15cb3b7e6",
            "instance": "i-0e32f21724076a73d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0421e5b15a1d19e22",
            "private_dns": "ip-10-0-10-42.ec2.internal",
            "private_ip": "10.0.10.42",
            "public_dns": "ec2-34-233-174-217.compute-1.amazonaws.com",
            "public_ip": "34.233.174.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "due1-bastion-eip",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-bastion-eip",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cc5bc6b81a76188",
            "arn": "arn:aws:ec2:us-east-1:637423499518:elastic-ip/eipalloc-02cc5bc6b81a76188",
            "association_id": "eipassoc-0bf3563be6c05677f",
            "domain": "vpc",
            "id": "eipalloc-02cc5bc6b81a76188",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0be8e22937f76694d",
            "private_dns": "ip-10-0-10-190.ec2.internal",
            "private_ip": "10.0.10.190",
            "public_dns": "ec2-3-231-63-199.compute-1.amazonaws.com",
            "public_ip": "3.231.63.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "due1-nat-eip",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-nat-eip",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:internet-gateway/igw-0b317c3a3ae3294ce",
            "id": "igw-0b317c3a3ae3294ce",
            "owner_id": "637423499518",
            "tags": {
              "Environment": "Development",
              "Name": "due1-main-igw",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-main-igw",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cc5bc6b81a76188",
            "association_id": "eipassoc-0bf3563be6c05677f",
            "connectivity_type": "public",
            "id": "nat-09a8c801992c6aead",
            "network_interface_id": "eni-0be8e22937f76694d",
            "private_ip": "10.0.10.190",
            "public_ip": "3.231.63.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02eea83a4b8e924ed",
            "tags": {
              "Environment": "Development",
              "Name": "due1-main-nat-gateway",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-main-nat-gateway",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.nat_eip",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:route-table/rtb-0873eef3304c0f376",
            "id": "rtb-0873eef3304c0f376",
            "owner_id": "637423499518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a8c801992c6aead",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "due1-pri-route-table",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pri-route-table",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_eip.nat_eip",
            "module.aws-vpc.aws_nat_gateway.main_nat",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:route-table/rtb-0c662d258fa3642d8",
            "id": "rtb-0c662d258fa3642d8",
            "owner_id": "637423499518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b317c3a3ae3294ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "Name": "due1-pub-route-table",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pub-route-table",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.public-gateway",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0148833fe7f7ae02b",
            "route_table_id": "rtb-0873eef3304c0f376",
            "subnet_id": "subnet-0ac6a60c4ac10b7f7"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.nat_eip",
            "module.aws-vpc.aws_nat_gateway.main_nat",
            "module.aws-vpc.aws_route_table.private_route_table",
            "module.aws-vpc.aws_subnet.private_subnets",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e356b5cd24ed939",
            "route_table_id": "rtb-0873eef3304c0f376",
            "subnet_id": "subnet-07de34901163e57ab"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.nat_eip",
            "module.aws-vpc.aws_nat_gateway.main_nat",
            "module.aws-vpc.aws_route_table.private_route_table",
            "module.aws-vpc.aws_subnet.private_subnets",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c812d3c0165e8fad",
            "route_table_id": "rtb-0873eef3304c0f376",
            "subnet_id": "subnet-00a612e23eb7438aa"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.nat_eip",
            "module.aws-vpc.aws_nat_gateway.main_nat",
            "module.aws-vpc.aws_route_table.private_route_table",
            "module.aws-vpc.aws_subnet.private_subnets",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025b91f5becdf9526",
            "route_table_id": "rtb-0c662d258fa3642d8",
            "subnet_id": "subnet-02eea83a4b8e924ed"
          },
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.public-gateway",
            "module.aws-vpc.aws_route_table.public_route_table",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dda3faf76548ee8e",
            "route_table_id": "rtb-0c662d258fa3642d8",
            "subnet_id": "subnet-0b487a8722ea5e691"
          },
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.public-gateway",
            "module.aws-vpc.aws_route_table.public_route_table",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b45dce6e483dd500",
            "route_table_id": "rtb-0c662d258fa3642d8",
            "subnet_id": "subnet-0d5eebd7a4372081d"
          },
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.public-gateway",
            "module.aws-vpc.aws_route_table.public_route_table",
            "module.aws-vpc.aws_subnet.public_subnets",
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-0def388bf0e4c48fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def388bf0e4c48fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-db-subnet-001",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-db-subnet-001",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-01980b03f7f17062f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01980b03f7f17062f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-db-subnet-002",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-db-subnet-002",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-02551c2c37e033c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02551c2c37e033c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-db-subnet-003",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-db-subnet-003",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-0ac6a60c4ac10b7f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac6a60c4ac10b7f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-pri-subnet-001",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pri-subnet-001",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-07de34901163e57ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07de34901163e57ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-pri-subnet-002",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pri-subnet-002",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-00a612e23eb7438aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a612e23eb7438aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-pri-subnet-003",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pri-subnet-003",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-02eea83a4b8e924ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eea83a4b8e924ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-pub-subnet-001",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pub-subnet-001",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-0b487a8722ea5e691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b487a8722ea5e691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-pub-subnet-002",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pub-subnet-002",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:subnet/subnet-0d5eebd7a4372081d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5eebd7a4372081d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423499518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "due1-pub-subnet-003",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-pub-subnet-003",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0046178b3ec1328bd"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423499518:vpc/vpc-0046178b3ec1328bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba873325fbcd3b36",
            "default_route_table_id": "rtb-0db9b1758957fb4b5",
            "default_security_group_id": "sg-088a8e1d3176e9993",
            "dhcp_options_id": "dopt-05a87793671630ca7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0046178b3ec1328bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db9b1758957fb4b5",
            "owner_id": "637423499518",
            "tags": {
              "Environment": "Development",
              "Name": "due1-main-vpc",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "due1-main-vpc",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}